<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_startapp"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.hp6300pro.demngayyeu.activity.StartActivity">

    <TextView
        android:ellipsize="end"
        android:id="@+id/tv_count_on_love_startapp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="bottom|center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tv_pick_start_startapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.5"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/pick_start_love_day"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <ImageView
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:ellipsize="end"
        android:maxLines="1"
        android:id="@+id/tv_day_in_startapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="45sp" />

    <ImageView
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            android:text="0"
            android:id="@+id/tv_count_day_in_startapp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/tv_day_static_startapp"
            android:layout_marginLeft="5dp"
            android:text="@string/day"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:button="@drawable/checkbox_select"
            android:paddingLeft="15dp"
            android:text="@string/start_this_day"
            android:textSize="23sp"
            android:shadowColor="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:text="@string/start_love"
        android:id="@+id/btn_yeuthoi_startapp"
        android:background="@drawable/khung_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"/>

</LinearLayout>
